syntax = "proto3";

package balancer.v1;

option go_package = "api/balancer/v1;v1";

service WeightUpdater {
  rpc Update (UpdateRequeset) returns (stream UpdateReply);
}

message UpdateRequeset {
  string serviceName = 1;
  string instanceID = 2;

  // 依赖接口列表
  repeated string operation = 3;
}

message UpdateReply {
  // operation -> weight
  map<string, int32> weights = 1;
}